--- a/README
+++ b/README
@@ -7,8 +7,11 @@ DirectoryProccessor- OOP (Java) project, implenents a directory-query applicatio
                      given as an exmaple for modular implmetation (adding new filters/orders types), generelaized parser
                      and project design.
                      
+                     written package is under this directory.
+                     https://github.com/Hanan-Amar/Projects_examples/tree/master/OOP_DirectoryProccesor/src/filesprocessing
+                     
 PanoramaGenerator- image proccessing (python) project, implementing algorithms for image alignment.
                    (harris corrner detector, ransac ... ) as an example for using numpy.
-                   unfortunately i have no driver for this project so it cannot be runned (course git removed). 
+                   unfortunately i have no driver for this project so it cannot be executed from a single command (course git removed). 
                    
                    ## from line 334 (commented) and on, is supplied code, i havent written it.
